# ML_end_to_end_3pm

./: README.md  app.py  main.py  pyproject.toml  requriements.txt
notebook/: train.ipynb
